TurboPFor-Integer-Compression/include/ic.h

typedef unsigned short     uint16_t;
typedef unsigned int       uint32_t;
//-- maximum output size for encoding
size_t bicbound16(size_t n);
size_t bicbound32(size_t n);
//-- Simple binary
unsigned bicbenc16(uint16_t      *in, unsigned n, unsigned char *out);
unsigned bicbdec16(unsigned char *in, unsigned n, uint16_t      *out);
unsigned bicbenc32(uint32_t      *in, unsigned n, unsigned char *out);
unsigned bicbdec32(unsigned char *in, unsigned n, uint32_t      *out);
//-- Leftmost minimal 
unsigned bicenc16( uint16_t      *in, unsigned n, unsigned char *out);
unsigned bicdec16( unsigned char *in, unsigned n, uint16_t      *out);
unsigned bicenc32( uint32_t      *in, unsigned n, unsigned char *out);
unsigned bicdec32( unsigned char *in, unsigned n, uint32_t      *out);
//-- Center Minimal
unsigned bicmenc16(uint16_t      *in, unsigned n, unsigned char *out);
unsigned bicmdec16(unsigned char *in, unsigned n, uint16_t      *out);
//************** Low level API - n limited to 128/256 ***************************************
#define P4D_MAX 256